--- a/{{cookiecutter.directory_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/test.yml
@@ -26,6 +26,6 @@ jobs:
     - name: "Upload coverage to Codecov"
       uses: codecov/codecov-action@v1
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ "{{" }}secrets.CODECOV_TOKEN{{ "}}" }}
         file: ./coverage.xml
         fail_ci_if_error: true
