--- a/{{cookiecutter.directory_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install coverage
     - name: Run migrations
       run: python manage.py migrate
