--- a/{{cookiecutter.directory_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/test.yml
@@ -8,16 +8,19 @@ jobs:
     name: Test Application
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
+    - uses: actions/cache@v2
+      with:
+        path: ${{ env.pythonLocation }}
+        key: ${{ env.pythonLocation }}-${{ hashFiles('requirements_dev.txt') }}
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install coverage
+        pip install --upgrade --upgrade-strategy eager -r requirements_dev.txt
     - name: Run migrations
       run: python manage.py migrate
     - name: Run tests
@@ -27,6 +30,6 @@ jobs:
     - name: "Upload coverage to Codecov"
       uses: codecov/codecov-action@v1
       with:
-        token: ${{ "{{" }}secrets.CODECOV_TOKEN{{ "}}" }}
+        token: ${{secrets.CODECOV_TOKEN}}
         file: ./coverage.xml
         fail_ci_if_error: true
