--- a/{{cookiecutter.directory_name}}/requirements.txt
+++ b/{{cookiecutter.directory_name}}/requirements.txt
@@ -1,4 +1,6 @@
-acdh-django-browsing==1.0.0
+acdh-django-browsing>=2.0
+django-next-prev==1.1.0
 django-spaghetti-and-meatballs==0.4.2
 Django>=4,<5
 requests>=2.25
+psycopg2-binary
