--- a/{{cookiecutter.directory_name}}/default.env
+++ b/{{cookiecutter.directory_name}}/default.env
@@ -1,6 +1,6 @@
 MIGRATE=yes
-DEBUG=True
-#POSTGRES_DB=djangocookiecutter_default
+DEBUG=True{% if cookiecutter.database == 'postgres' %}
+POSTGRES_DB={{ cookiecutter.project_abbr }}
 #POSTGRES_USER=postgres
 #POSTGRES_PASSWORD=postgres
 #POSTGRES_HOST=localhost
