--- a/{{cookiecutter.directory_name}}/requirements.txt
+++ b/{{cookiecutter.directory_name}}/requirements.txt
@@ -2,5 +2,8 @@ acdh-django-browsing>=2.0
 django-next-prev==1.1.0
 django-spaghetti-and-meatballs==0.4.2
 Django>=4,<5
-requests>=2.25
-psycopg2-binary
+requests>=2.25{% if cookiecutter.database == 'postgres' %}
+psycopg2-binary{% endif %}{% if cookiecutter.appcreator == 'yes' %}
+pandas
+jinj2
+{% endif %}
