--- a/{{cookiecutter.directory_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/test.yml
@@ -8,11 +8,11 @@ jobs:
     name: Test Application
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v3
+    - name: Set up Python environment
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: "3.11"
     - uses: actions/cache@v2
       with:
         path: ${{ "{{" }} env.pythonLocation {{ "}}" }}
